修复旧包下的base64解码器不能使用的问题